--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -4,7 +4,7 @@ main {
 }
 
 .buyBtn {
-  background-color: rgb(63, 151, 63);
+  background-color: rgb(102, 192, 102);
   border: 1px solid black;
   border-radius: 3px;
   padding: 3px 10px;
@@ -18,11 +18,12 @@ main {
   border: 1px solid black;
   border-radius: 3px;
   padding: 3px 10px;
-  background-color: #ce1717;
+  background-color: #d33b3b;
+  margin-left: 3px;
 }
 
 .deleteBtn:hover {
-  background-color: tomato;
+  background-color: rgb(255, 68, 35);
 }
 .card {
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
@@ -33,4 +34,50 @@ main {
   margin-right: 15px;
   padding: 10px;
   text-align: center;
+}
+
+.form {
+justify-content: center;
+text-align: center;
+margin: auto;
+width: 400px;
+border: 1px solid black;
+padding: 10px;
+border-radius: 5px;
+
+}
+
+input{
+  margin-bottom: 3px;
+  font-size: 16px;
+}
+
+.submit {
+  border: 1px solid black;
+  border-radius: 3px;
+  padding: 4px 12px;
+  background-color: #f7ace7;
+  margin-top: 4px;
+}
+.submit:hover {
+  background-color: rgb(250, 19, 208);
+}
+
+.banner-header{
+  margin-bottom: 8px;
+}
+
+.resetButton, .clearButton {
+    border: 1px solid black;
+    border-radius: 3px;
+    padding: 5px 20px;
+    margin-top: 4px;
+}
+
+.clearButton{
+margin-left: 5px;
+}
+
+.clearButton:hover, .resetButton:hover {
+  background-color: rgb(250, 250, 19);
 }
