--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -30,10 +30,13 @@ main {
   transition: 0.3s;
   border-radius: 5px;
   display: inline-block;
+  margin-right:20px;
+  margin-left: 20px;
   width: 20%;
-  margin-right: 15px;
   padding: 10px;
   text-align: center;
+  background-color: rgb(238, 229, 236);
+  margin-bottom: 35px;
 }
 
 .form {
@@ -80,4 +83,11 @@ margin-left: 5px;
 
 .clearButton:hover, .resetButton:hover {
   background-color: rgb(250, 250, 19);
+}
+
+.container {
+  padding-top:30px;
+margin-left: 30px;
+margin-right: auto;
+  align-items: center; /* Center items horizontally */
 }
